Fix spacing issues

--- a/src/components/fieldset/_fieldset.scss
+++ b/src/components/fieldset/_fieldset.scss
@@ -2,6 +2,9 @@
   &__legend {
     font-weight: $font-weight-bold;
     margin: 0;
+    &:not(&--with-description) {
+      margin-bottom: 0.55rem;
+    }
   }
 
   &__description:not(&__description--title) {
